# deckit

./: .gitignore  AGENTS.md
.agents/plugins/: marketplace.json
docs/: any2ppt-plugin-vision.md  development-layout.md  pptx-native-experiment.md  production-mode-insights.md  v1-roadmap.md  v1-smoke-report.md  v1-status.md
plugins/any2ppt/.codex-plugin/: plugin.json
plugins/any2ppt/references/: budget-modes.md  critique-checklist.md  slide-archetypes.md  workflow.md
plugins/any2ppt/skills/deck-producer/: SKILL.md
plugins/any2ppt/skills/slide-storyboarder/: SKILL.md
plugins/any2ppt/skills/story-architect/: SKILL.md
plugins/any2ppt/skills/visual-director/: SKILL.md
plugins/deckit/.codex-plugin/: plugin.json
plugins/deckit/references/: budget-modes.md  workflow.md
plugins/deckit/skills/deck-producer/: SKILL.md
plugins/deckit/skills/slide-storyboarder/: SKILL.md
plugins/deckit/skills/story-architect/: SKILL.md
plugins/deckit/skills/visual-director/: SKILL.md
prompts/: 00_cover.md  01_date_dispute.md  02_ambiguous_history.md  03_moral_high_ground.md  04_october_to_victory.md  05_memory_as_legitimacy.md  06_depleting_legacy.md  07_closing.md  README.md
tools/: pyproject.toml
tools/src/any2ppt_dev/: __init__.py  cli.py
tools/src/deckit_dev/: cli.py
