[project]
name = "any2ppt-dev-tools"
version = "0.1.0"
description = "Development utilities for the Any2PPT Codex plugin."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.2",
]

[project.scripts]
any2ppt-dev = "any2ppt_dev.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/any2ppt_dev"]
